# TepezzaScraper

./: .gitignore  DEFAULT_CONF.ini  README.md  setup.cfg
data/: __ZIPCODES.csv
src/: hotkey.py  scraper.py
tepezza/: __init__.py  api.py
