[metadata]
name = tepezza
version = 0.1.2
author = Will Bradley
author_email = derivativedude123@gmail.com
description = Scrape doctor data from www.tepezza.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2435191/TepezzaScraper
project_urls =
    Bug Tracker = https://github.com/2435191/TepezzaScraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.data_files]
data = data/__ZIPCODES.csv, data/get_master_zipcode_list.ipynb, DEFAULT_CONF.ini